增加付货窗口

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,7 @@ Pro_KuCun_Icon2.ico
 Pro_KuCun_Icon.ico
 Win32/Debug/config.ini
 Win32/Debug/update.txt
+__history/Unit_main.pas.~30~
+__history/Unit_main.pas.~29~
+*.~29~
+*.~31~
