--- a/Pro_KuCun.dproj
+++ b/Pro_KuCun.dproj
@@ -109,6 +109,10 @@
             <Form>Form_caigou_shenqing_new</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Unit_fuhuo.pas">
+            <Form>Form_fuhuo</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
