--- a/Pro_KuCun.dproj
+++ b/Pro_KuCun.dproj
@@ -133,6 +133,10 @@
             <Form>Form_ShouTuiHuo</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Unit_KuCunJilu.pas">
+            <Form>Form_KuCunJilu</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
