--- a/Win32/Debug/config.ini
+++ b/Win32/Debug/config.ini
@@ -1,12 +1,12 @@
 [connection]
 host=47.104.7.204
 sjk=cloudShop
-username=mgchongwu
-password=50D157A97D88919E61EA2527350956E2
+username=sa
+password=005DA2B85CE3252A173BFE4EFF
 
 
 [Register]
-sn=5557117
+sn=44311913
 
 [version]
 version=0
