增加包装规格

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,8 @@ __history/Unit_main.pas.~29~
 *.~29~
 *.~31~
 __history/Unit_public.pas.~3~
+Unit_main.dfm
+Unit_main.dfm
+Unit_jiamubiao.pas
+Unit_jiamubiao.pas
+Unit_jiamubiao.dfm
